week1 work is now complete.

--- a/week1/index.html
+++ b/week1/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,8 +18,9 @@ any year in the past 60 years. </p>
 <fieldset>
 <label>Please enter an artist:</label>
 <input name="theArtist" />
-<input type="submit" value="Go!" />
+<input type="submit" value="Go!" /><br>
 </fieldset>
 </form>
+<a href="signup.html">Sign Up</a>
 </body>
 </html>
