Done all work apart from functions in week2.

--- a/week2/signup.html
+++ b/week2/signup.html
@@ -8,7 +8,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="signup.php" method="post">
         Username<br>
         <input type="text" name="username"><br><br>
         Password<br>
@@ -22,7 +22,7 @@
         Year of Birth<br>
         <input type="text" name="yob"><br><br>
         <input id="submit" type="submit" name="submit"><br><br>
-        <a href="index.php">Home Page</a>
+        <a href="index.html">Home Page</a>
     </form>
 </body>
 </html>
