I have made some major steps towards completion of this code project still much more to go though.

--- a/AE2/project/login.html
+++ b/AE2/project/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HitTastic! Login</title>
+<title>PointsOfInterest - Login</title>
 </head>
 <body>
-<h1>Log in to HitTastic!</h1>
+<h1>Log in to PointsOfInterest</h1>
 <form method="post" action="login.php">
 <label for="username">Username:</label>
 <input name="username" id="username"/>
@@ -12,7 +12,7 @@
 <label for="password">Password:</label>
 <input name="password" id="password" type="password"/>
 <br/>
-<input type="submit" value="Go!" />
+<input type="submit" value="Login" />
 </form>
 </body>
 </html>
